crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef struct PamojaLorawanBlockMic PamojaLorawanBlockMic;
typedef struct PamojaLorawanClockSync PamojaLorawanClockSync;
typedef struct PamojaLorawanDefrag PamojaLorawanDefrag;
typedef struct PamojaLorawanFirmware PamojaLorawanFirmware;
typedef struct {
  uint8_t port;
  uint8_t cid;
  uint8_t uplink;
  uint8_t package;
  uint8_t version;
  uint32_t device_time;
  int32_t time_correction;
  uint8_t token;
  uint8_t ans_required;
  uint8_t period;
  uint8_t not_supported;
  uint8_t transmissions;
  uint32_t firmware;
  uint32_t hardware;
  uint32_t reboot;
  uint8_t image_status;
  uint32_t next_version;
  uint8_t has_next_version;
  uint32_t delete_version;
  uint8_t no_valid_image;
  uint8_t invalid_version;
  uint8_t frag_index;
  uint8_t mc_group_bit_mask;
  uint16_t nb_frag;
  uint8_t frag_size;
  uint8_t ack_reception;
  uint8_t frag_algo;
  uint8_t block_ack_delay;
  uint8_t padding;
  uint8_t descriptor[4];
  uint16_t session_cnt;
  uint8_t mic[4];
  uint16_t received;
  uint8_t missing;
  uint8_t mic_error;
  uint8_t memory_error;
  uint8_t no_session;
  uint8_t unsupported_algorithm;
  uint8_t unsupported_index;
  uint8_t wrong_descriptor;
  uint8_t session_replay;
  uint8_t all_participants;
  uint8_t status_item;
  uint16_t fragment_n;
  uint8_t mc_group_id;
  uint32_t mc_addr;
  uint8_t mc_key_encrypted[16];
  uint32_t min_mc_fcnt;
  uint32_t max_mc_fcnt;
  uint8_t group_mask;
  uint8_t nb_total_groups;
  uint8_t id_error;
  uint32_t session_time;
  uint8_t time_out;
  uint8_t periodicity;
  uint32_t dl_frequency_hz;
  uint8_t data_rate;
  uint32_t time_to_start;
  uint8_t has_time_to_start;
  uint8_t dr_error;
  uint8_t freq_error;
  uint8_t start_missed;
} PamojaLorawanPackageCommand;
PamojaStatus pamoja_lorawan_mc_root_key(const uint8_t *root_key,
                                        uint8_t lorawan_11,
                                        uint8_t *out_key);
PamojaStatus pamoja_lorawan_mc_ke_key(const uint8_t *mc_root_key, uint8_t *out_key);
PamojaStatus pamoja_lorawan_mc_key(const uint8_t *mc_ke_key,
                                   const uint8_t *wrapped,
                                   uint8_t *out_key);
PamojaStatus pamoja_lorawan_wrap_mc_key(const uint8_t *mc_ke_key,
                                        const uint8_t *mc_key,
                                        uint8_t *out_wrapped);
PamojaStatus pamoja_lorawan_mc_app_s_key(const uint8_t *mc_key, uint32_t mc_addr, uint8_t *out_key);
PamojaStatus pamoja_lorawan_mc_nwk_s_key(const uint8_t *mc_key, uint32_t mc_addr, uint8_t *out_key);
PamojaStatus pamoja_lorawan_data_block_int_key(const uint8_t *root_key, uint8_t *out_key);
uint32_t pamoja_lorawan_frag_prbs23(uint32_t x);
PamojaStatus pamoja_lorawan_frag_parity_line(uint16_t coded,
                                             uint16_t nb_frag,
                                             uint8_t *out_line,
                                             uintptr_t line_len,
                                             uintptr_t *out_ones);
PamojaStatus pamoja_lorawan_frag_session(uintptr_t block_len,
                                         uint8_t frag_size,
                                         uint16_t *out_nb_frag,
                                         uint8_t *out_padding);
PamojaStatus pamoja_lorawan_frag_fragment(const uint8_t *block,
                                          uintptr_t block_len,
                                          uint8_t frag_size,
                                          uint16_t n,
                                          uint8_t *out_fragment,
                                          uintptr_t out_len);
uintptr_t pamoja_lorawan_defrag_matrix_len(uint16_t nb_frag, uint16_t max_lost);
PamojaStatus pamoja_lorawan_defrag_new(uint16_t nb_frag,
                                       uint8_t frag_size,
                                       uint16_t max_lost,
                                       PamojaLorawanDefrag **out_session);
void pamoja_lorawan_defrag_free(PamojaLorawanDefrag *session);
PamojaStatus pamoja_lorawan_defrag_fragment(PamojaLorawanDefrag *session,
                                            uint16_t n,
                                            const uint8_t *fragment,
                                            uintptr_t fragment_len,
                                            uint8_t *out_done);
PamojaStatus pamoja_lorawan_defrag_status(const PamojaLorawanDefrag *session,
                                          uint16_t *out_received,
                                          uint16_t *out_missing,
                                          uint8_t *out_done);
PamojaStatus pamoja_lorawan_defrag_block(const PamojaLorawanDefrag *session,
                                         uint8_t *out_block,
                                         uintptr_t capacity,
                                         uintptr_t *out_len);
PamojaStatus pamoja_lorawan_block_mic_start(const uint8_t *data_block_int_key,
                                            uint16_t session_cnt,
                                            uint8_t frag_index,
                                            const uint8_t *descriptor,
                                            uint32_t block_len,
                                            PamojaLorawanBlockMic **out_mic);
PamojaStatus pamoja_lorawan_block_mic_update(PamojaLorawanBlockMic *mic,
                                             const uint8_t *data,
                                             uintptr_t data_len);
PamojaStatus pamoja_lorawan_block_mic_finish(PamojaLorawanBlockMic *mic, uint8_t *out_mic);
void pamoja_lorawan_block_mic_free(PamojaLorawanBlockMic *mic);
PamojaStatus pamoja_lorawan_clock_sync_new(uint8_t self_managed, PamojaLorawanClockSync **out_sync);
void pamoja_lorawan_clock_sync_free(PamojaLorawanClockSync *sync);
PamojaStatus pamoja_lorawan_clock_sync_request(PamojaLorawanClockSync *sync,
                                               uint32_t device_time,
                                               uint8_t ans_required,
                                               uint8_t *out_command,
                                               uintptr_t capacity,
                                               uintptr_t *out_len);
PamojaStatus pamoja_lorawan_clock_sync_heard(PamojaLorawanClockSync *sync,
                                             const uint8_t *payload,
                                             uintptr_t payload_len,
                                             int32_t *out_correction,
                                             uint8_t *out_has_correction,
                                             uint8_t *out_more,
                                             uint8_t *out_resync,
                                             uint8_t *out_answer_due);
PamojaStatus pamoja_lorawan_clock_sync_answer(PamojaLorawanClockSync *sync,
                                              uint32_t device_time,
                                              uint8_t *out_command,
                                              uintptr_t capacity,
                                              uintptr_t *out_len);
PamojaStatus pamoja_lorawan_clock_sync_status(const PamojaLorawanClockSync *sync,
                                              uint8_t *out_token,
                                              uint32_t *out_period_s,
                                              uint8_t *out_answer_due);
PamojaStatus pamoja_lorawan_firmware_new(uint32_t firmware,
                                         uint32_t hardware,
                                         PamojaLorawanFirmware **out_manager);
void pamoja_lorawan_firmware_free(PamojaLorawanFirmware *manager);
PamojaStatus pamoja_lorawan_firmware_set_image(PamojaLorawanFirmware *manager,
                                               uint8_t status,
                                               uint32_t version);
PamojaStatus pamoja_lorawan_firmware_heard(PamojaLorawanFirmware *manager,
                                           const uint8_t *payload,
                                           uintptr_t payload_len,
                                           uint32_t now_s,
                                           uint8_t has_now,
                                           uint8_t *out_answers,
                                           uintptr_t capacity,
                                           uintptr_t *out_len);
PamojaStatus pamoja_lorawan_firmware_reboot(const PamojaLorawanFirmware *manager,
                                            uint32_t *out_at_s,
                                            uint8_t *out_has_at,
                                            uint32_t *out_in_s,
                                            uint8_t *out_has_in,
                                            uint8_t *out_now);
PamojaStatus pamoja_lorawan_firmware_image(const PamojaLorawanFirmware *manager,
                                           uint8_t *out_status,
                                           uint32_t *out_next_version,
                                           uint8_t *out_has_next_version);
PamojaStatus pamoja_lorawan_firmware_rebooted(PamojaLorawanFirmware *manager);
PamojaStatus pamoja_lorawan_package_parse(uint8_t port,
                                          uint8_t uplink,
                                          const uint8_t *payload,
                                          uintptr_t payload_len,
                                          PamojaLorawanPackageCommand *out_command,
                                          uintptr_t *out_taken);
PamojaStatus pamoja_lorawan_package_encode(const PamojaLorawanPackageCommand *command,
                                           const uint8_t *data,
                                           uintptr_t data_len,
                                           uint8_t *out_payload,
                                           uintptr_t capacity,
                                           uintptr_t *out_len);
PamojaStatus pamoja_lorawan_package_status_item(const uint8_t *payload,
                                                uintptr_t payload_len,
                                                PamojaLorawanPackageCommand *out_command);